Fixed horizontal scrollbar bug at all viewport widths

--- a/_sass/components/_tile.scss
+++ b/_sass/components/_tile.scss
@@ -30,6 +30,10 @@
 			border-radius: 10px;
 
 			transition: all $durationLong $bezierEaseOut;
+
+			@media (max-width: $breakpointSmall) {
+				display: none;
+			}
 		}
 
 		&:hover {
@@ -193,6 +197,7 @@
 		display: flex;
 		align-items: center;
 		height: 100%;
+		position: relative;
 
 		transition: all $durationLong $bezierEaseOut;
 
@@ -204,11 +209,15 @@
 			bottom: -1px;
 			left: -2.5em;
 			right: -2.5em;
-			background-color: "transparent";
+			background-color: transparent;
 			z-index: -1;
 			border-radius: 10px;
 
 			transition: all $durationLong $bezierEaseOut;
+
+			@media (max-width: $breakpointSmall) {
+				display: none;
+			}
 		}
 
 		&:hover {
